[package]
name = "roxy"
version = "0.1.0"
authors = ["Yonatan Ethiopia yonatanethiopia1@gmail.com"]
edition = "2024"
description = "A minimalist CLI proxy manager and internet speed tester"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
home = "0.5.12"
indicatif = "0.18.4"
instant = "0.1.13"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
